Début du travail de nettoyage : ajout d'un semblat d'header sur DP_mu, récupération de Notations.org
On arrête le travail là puisqu'on travaille sur des fichiers obsolètes. On va faire avancer master, puis merger master avec cette branche et recommencer à partir de là.

--- a/DP_mu.org
+++ b/DP_mu.org
@@ -1,4 +1,16 @@
 #+TITLE: Calcul exact de la /feature expectation/
+* Dynamic programming computation of $\mu$ header
+** Détails techniques
+   Python :
+   #+begin_src python
+from DP_mu import *
+
+DP_mu( pi, Phi )
+   #+end_src
+** Entrées
+   - =pi= : Matrice de taille $|S|\times |S|$ représentant la politique
+   - =Phi= : Matrice de ta
+** Sorties
 * Principe
 De la même manière qu'il est possible d'écrire l'equation de Bellman sous forme matricielle : 
 \begin{equation}
