--- a/LSTDmu.org
+++ b/LSTDmu.org
@@ -3,6 +3,32 @@
 FIXME: Il faudrait séparer le code de LSTDmu utilisable par tous les algos d'IRL et le code de l'ANIRL (qui a besoin de LSPI and co).
 
   In their paper, \cite{abbeel2004apprenticeship}, Ng and Abbeel present an IRL algorithm. This file is an implementation of this algorithm in its projection form, but using a LSTD method to estimate $\mu_E$ and $\mu$ and using LSPI to solve the MDP.
+* LSTD$\mu$ header
+** On policy estimation of $E[\mu(s_0)]$
+*** Détails techniques
+#+begin_src C
+#include "LSTDmu.h"
+
+unsigned int g_iP = -1;
+unsigned int g_iA = -1;
+unsigned int g_iS = -1;
+gsl_matrix* (g_fPsi)(gsl_matrix*) = NULL;
+double g_dGamma_anirl = -1;
+double g_dLambda_lstdmu = -1;
+gsl_matrix* (g_fS_0)() = NULL;
+
+gsl_matrix* mu_s0 = lstd_mu_op(  gsl_matrix* D_mu );
+#+end_src
+*** Entrées
+    - =D_mu= : Matrice dont chaque ligne a la forme  $(s,a,s',\psi(s)^T,eoe)$
+*** Sorties
+    - Une estimation de $E[\mu(s_0)]$
+*** Paramètres
+    - =g_fPsi= : fonction de feature de $S$ dans $\mathbf{R}^p$
+    - =g_dGamma_anirl= : Coefficient d'amortissement FIXME: le nom (*_anirl) est mal choisi
+    - =g_dLambda_lstdmu= : Coefficient de régularisation utilisé dans l'expression : $\tilde \omega^\pi \leftarrow (\tilde A + \lambda Id) ^{-1}\tilde b$
+    - =g_fS_0= : Fonction renvoyant la matrice des états initiaux (un par ligne) sur lesquels l'estimation de monte carlo de l'espérance sera caclculée.
+
 * C implementation
 ** Externals
 *** ANIRL
@@ -53,7 +79,7 @@ gsl_matrix* lstd_mu_op(  gsl_matrix* D_mu ){
      #+begin_src c :tangle LSTDmu.c :main no
   gsl_matrix* b = gsl_matrix_calloc( g_iP, g_iP );
      #+end_src
-   - for each $(s,a,s',\psi(s),eoe) \in D_\mu$
+   - for each $(s,a,s',\psi(s)^T,eoe) \in D_\mu$
      #+begin_src c :tangle LSTDmu.c :main no
   for( unsigned int i=0; i < D_mu->size1 ; i++ ){
      #+end_src
