--- a/Notations.org
+++ b/Notations.org
@@ -26,3 +26,6 @@ FIXME: Trouver un moyen de lier les notations mathématiques au code corresponda
  - $l : S\times A \rightarrow \mathbb{R}$ : fonction de perte
  - $R_N$ : fonction de risque empirique
  - $Q_E : S\times A \rightarrow \mathbb{R}$ : fonction de qualité de l'expert
+ - $\gamma_{\mu}$ : Coefficient d'amortissement lors du calcul de $\mu$.
+ - $\lambda_{\mu}$ : Coefficient de régularisation lors du calcul de $\mu$ par LSTD$\mu$.
+ - $s_0$ : Etat initial dans un MDP ou par abus de notation distribution sur les états initiaux
