--- a/Notations.org
+++ b/Notations.org
@@ -29,3 +29,4 @@ FIXME: Trouver un moyen de lier les notations mathématiques au code corresponda
  - $\gamma_{\mu}$ : Coefficient d'amortissement lors du calcul de $\mu$.
  - $\lambda_{\mu}$ : Coefficient de régularisation lors du calcul de $\mu$ par LSTD$\mu$.
  - $s_0$ : Etat initial dans un MDP ou par abus de notation distribution sur les états initiaux
+ - $\omega_\mu$ : Matrice de taille $k \times p$ permettant l'estimation de $\mu(s,a)$ selon la formule $\hat\mu(s,a) = \omega_\mu^T\phi(s,a)$
