--- a/LSTDmu.org
+++ b/LSTDmu.org
@@ -80,7 +80,31 @@ gsl_matrix* omega_mu = lstd_mu_omega(  gsl_matrix* D_mu,
     - =g_dGamma_anirl= : Coefficient d'amortissement FIXME: le nom (*_anirl) est mal choisi
     - =g_dLambda_lstdmu= : Coefficient de régularisation utilisé dans l'expression : $\tilde \omega^\pi \leftarrow (\tilde A + \lambda Id) ^{-1}\tilde b$
 
+** Off policy estimation of  $E[\mu(s_0)]$
+*** Détails techniques
+#+begin_src C
+#include "LSTDmu.h"
 
+unsigned int g_iP = -1;
+unsigned int g_iA = -1;
+unsigned int g_iS = -1;
+gsl_matrix* (g_fPsi)(gsl_matrix*) = NULL;
+double g_dGamma_anirl = -1;
+double g_dLambda_lstdmu = -1;
+gsl_matrix* (g_fS_0)() = NULL;
+
+gsl_matrix* mu_s0 = lstd_mu_op(  gsl_matrix* D_mu );
+#+end_src
+*** Entrées
+    - =D_mu= : Matrice dont chaque ligne a la forme  $(s,a,s',\psi(s)^T,eoe)$
+    - =pi= : Politique associant une action à un état
+*** Sorties
+    - Une estimation de $E[\mu(s_0)]$ pour la politique fournie en argument
+*** Paramètres
+    - =g_fPsi= : fonction de feature de $S$ dans $\mathbf{R}^p$
+    - =g_dGamma_anirl= : Coefficient d'amortissement FIXME: le nom (*_anirl) est mal choisi
+    - =g_dLambda_lstdmu= : Coefficient de régularisation utilisé dans l'expression : $\tilde \omega^\pi \leftarrow (\tilde A + \lambda Id) ^{-1}\tilde b$
+    - =g_fS_0= : Fonction renvoyant la matrice des états initiaux (un par ligne) sur lesquels l'estimation de monte carlo de l'espérance sera caclculée.
 * C implementation
 ** Externals
 *** ANIRL
