--- a/NouveauxAlgos.org
+++ b/NouveauxAlgos.org
@@ -7,7 +7,36 @@
 #+LaTeX_HEADER: \usepackage{natbib}
 #+TITLE:Deux nouveaux algos d'IRL
 [TABLE-OF-CONTENTS]
+* SCIRL Header
+** Détails techniques
+#+begin_src python
+from LAFEM.py import *
 
+class my_LAFEM( LAFEM ):
+    A = []
+    def l( self, s, a ):
+        return -1
+    def mu_E( self,s a ):
+        return [-1]
+    def alpha( self, t ):
+        return -1
+    theta_0 = [-1]
+    Threshold = -1
+    T=-1
+    data = []
+#+end_src
+** Entrées
+    - =data= : Matrice dont chaque ligne a la forme  $[s,a]$ correspondant aux actions choisies par l'expert
+** Sorties
+    - =theta= : Vecteur de récompense tel que $R(s) = \theta^T\psi(s)$ expliquant le comportement de l'expert. Il n'est pas nécessaire de fournir $\psi$ à l'algorithme puisque la définition de $\psi$ est liée à celle de $\mu$.
+** Paramètres
+   - =A= : Description de l'espace d'action
+   - =l()= : Fonction de FIXME trouver le mot qui va bien je m'en souviens plus
+   - =mu_E()= : Routine pour le calcul de la feature expectation de l'expert
+   - =alpha()= : pas d'apprentissage pour la descente de sous gradient
+   - =theta_0= : Vecteur récompense initial
+   - =Threshold= : Seuil où l'algorithme s'arrête si la norme du gradient passe en dessous
+   - =T= : Nombre maximum d'itérations
 * Rappel sur le RL et l'IRL
 ** RL
   L'apprentissage par renforcement (/Reinforcement Learning/, RL) consiste, à partir d'une fonction de récompense définie par exemple sur l'espace d'état $R : S \rightarrow \mathbb{R}$, à trouver la politique optimale $\pi^* : S\rightarrow A$ optimisant le cumul pondéré des récompenses sur le long terme.
@@ -221,8 +250,8 @@ Cela signifie qu'en choisissant les bonnes fonctions de base l'on arrive directe
 \bibliography{../Biblio/Biblio}
 
 * Implémentation python de LAFEM 				       :code:
-  :PROPERTIES:
-  :ID:       879A40A3-5890-4665-86C0-826ABD3BC1BC
+:PROPERTIES:
+:ID:       879A40A3-5890-4665-86C0-826ABD3BC1BC
   :END:
    L'algorithme est implémenté dans une classe abstraite en python. Les éléments nécessaires à l'algorithme sont définis comme des fonctions abstraites, ce qui fait qu'il est impossible de créer ou d'utiliser cette classe sans la sous classer en définissant les éléments nécessaires.
 
