--- a/InvertedPendulum/plot.org
+++ b/InvertedPendulum/plot.org
@@ -330,11 +330,11 @@ plot.exe: plot.o ../utils.o ../LSPI.o simulator.o ../greedy.o ../LSTDQ.o ../abbe
 *** Generating the data :
   #+srcname: LSTDmu_Exp_make
   #+begin_src makefile
-plot.dat: plot.samples plot.exe
+plot.dat: Samples.dat plot.exe
 	./plot.exe > plot.dat
 
-plot.samples: generator.exe 
-	./generator.exe > Samples.dat && touch plot.samples
+Samples.dat: generator.exe 
+	./generator.exe > Samples.dat 
 
 #+end_src
 *** Sensitivity of the quality of the policy to the number of samples fed to LSPI (No error bars)
